--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,3 +105,22 @@ a {
     color-scheme: dark;
   }
 }
+
+.reference-lines {
+  position: relative;
+  display: inline-block;
+}
+
+.reference-lines::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  pointer-events: none;
+  z-index: 1;
+  background-color: black;
+  transform: scaleX(var(--line-scale));
+  transform-origin: left;
+}
