--- a/src/components/atoms/AnimatedLines/animatedLines.module.css
+++ b/src/components/atoms/AnimatedLines/animatedLines.module.css
@@ -1,4 +1,21 @@
 .lines {
   position: relative;
   display: inline-block;
+  &:global(.reference-lines):after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    pointer-events: none;
+    z-index: 1;
+    background-color: black;
+    transform-origin: left;
+    transform: scaleX(var(--line-scale));
+  }
+  &:global(.reference-lines) {
+    position: relative;
+    display: inline-block;
+  }
 }
