feat(new): new components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
+
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -106,3 +111,7 @@ a {
     color-scheme: dark;
   }
 }
+
+.main-grid {
+    @apply container grid grid-cols-4 gap-y-0 gap-x-3 md:grid-cols-8 lg:gap-x-3 xl:gap-x-4 lg:grid-cols-12;
+  }
