--- a/src/app/timeline/page.module.css
+++ b/src/app/timeline/page.module.css
@@ -1,6 +1,11 @@
 .content {
   padding-top: 100px;
-  padding-bottom: 100vh;
+  padding-bottom: 200vh;
   padding-left: 3rem;
   padding-right: 3rem;
+}
+
+
+.title {
+  margin-bottom: 30rem;
 }
