--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,10 +1,18 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
+  gap: 20px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  & h1 {
+    font-size: 3rem;
+    font-weight: 900;
+  }
 }
 
 .description {
@@ -44,6 +52,7 @@
   grid-template-columns: repeat(4, minmax(25%, auto));
   max-width: 100%;
   width: var(--max-width);
+  gap: 2rem;
 }
 
 .card {
@@ -51,7 +60,15 @@
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+  transition: background 200ms, border 200ms, box-shadow 0.22s ease-out;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  will-change: background, border, box-shadow;
+}
+
+.card a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
 
 .card span {
@@ -80,7 +97,6 @@
   background-color: lightblue;
   padding: 2rem;
 }
-
 
 .center {
   display: flex;
@@ -122,6 +138,7 @@
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
     border: 1px solid rgba(var(--card-border-rgb), 0.15);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 1px -1px, rgba(0, 0, 0, 0.06) 0px 2px 0px -1px;
   }
 
   .card:hover span {
@@ -237,7 +254,6 @@
     transform: rotate(0deg);
   }
 }
-
 
 .nav {
   margin-top: 5rem;
