--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -12,7 +12,13 @@
   & h1 {
     font-size: 3rem;
     font-weight: 900;
+    color: white;
   }
+}
+
+.inverted {
+  color: black;
+  background-color: lightgray;
 }
 
 .description {
@@ -58,10 +64,10 @@
 .card {
   padding: 1rem 1.2rem;
   border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.1);
   transition: background 200ms, border 200ms, box-shadow 0.22s ease-out;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 4px 6px -1px, rgba(255, 255, 255, 0.06) 0px 2px 4px -1px;
   will-change: background, border, box-shadow;
 }
 
@@ -94,8 +100,9 @@
   width: 100%;
   height: 100vh;
   position: relative;
-  background-color: lightblue;
+  background-color: #111;
   padding: 2rem;
+  color: white;
 }
 
 .center {
@@ -136,9 +143,9 @@
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 1px -1px, rgba(0, 0, 0, 0.06) 0px 2px 0px -1px;
+    background: rgba(255, 255, 255, 0.15);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 2px 1px -1px, rgba(255, 255, 255, 0.06) 0px 2px 0px -1px;
   }
 
   .card:hover span {
