--- a/src/components/molecules/MouseFollow/styles.module.css
+++ b/src/components/molecules/MouseFollow/styles.module.css
@@ -9,7 +9,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  background-color: #ebf8ff; /* This is the color for bg-blue-100 */
+  background-color: rgb(0, 157, 255);
   z-index: 10;
   will-change: transform;
   pointer-events: none;
