--- a/src/components/atoms/AnimatedLines/animatedLines.module.css
+++ b/src/components/atoms/AnimatedLines/animatedLines.module.css
@@ -1,21 +1,24 @@
 .lines {
   position: relative;
   display: inline-block;
-  &:global(.reference-lines):after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    pointer-events: none;
-    z-index: 1;
-    background-color: black;
-    transform-origin: left;
-    transform: scaleX(var(--line-scale, 0));
-  }
-  &:global(.reference-lines) {
-    position: relative;
-    display: inline-block;
-  }
+}
+
+.lines:global(.reference-lines) {
+  position: relative;
+  display: inline-block;
+}
+
+.lines:global(.reference-lines):after {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  pointer-events: none;
+  z-index: 1;
+  background-color: currentColor;
+  transform-origin: left;
+  transform: scaleX(var(--line-scale, 0));
+  transition: transform 0.3s ease-out;
 }
